// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal demo -- closable 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    closable=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    closable=false
  </button>
</div>
`;

exports[`Modal demo -- customClassName 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    custom className
  </button>
</div>
`;

exports[`Modal demo -- customStyle 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    custom style
  </button>
</div>
`;

exports[`Modal demo -- destroyOnClose 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    click
  </button>
</div>
`;

exports[`Modal demo -- keyboard 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    keyboard=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    keyboard=false
  </button>
</div>
`;

exports[`Modal demo -- mask 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    mask=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    mask=false
  </button>
</div>
`;

exports[`Modal demo -- maskClosable 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    maskClosable=true
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    maskClosable=false
  </button>
</div>
`;

exports[`Modal demo -- method 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    alert
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    confirm
  </button>
</div>
`;

exports[`Modal demo -- modal 1`] = `
.c30 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c30:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 {
  position: relative;
  z-index: 1;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c22 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c18 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c22 .c20 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c22 .c13 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c22 .c15,
.c22 .c17 {
  line-height: 16px;
}

.c22 .c15 {
  padding-right: 20px;
}

.c22 .c17 {
  padding-left: 20px;
}

.c22 .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c22 .c18 {
  left: 100%;
  margin-left: -19px;
}

.c22 .c20 {
  background: #9fecc0;
}

.c22 .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c25 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  display: inline-block;
  vertical-align: middle;
  border-color: #c3cad9;
}

.c23 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
  height: 28px;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c23 .c28 {
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c23 .c28::-webkit-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::-moz-placeholder {
  color: #abb4c3;
}

.c23 .c28:-ms-input-placeholder {
  color: #abb4c3;
}

.c23 .c28::placeholder {
  color: #abb4c3;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c23 .c24,
.c23 .c26 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c23 .c24:hover,
.c23 .c26:hover {
  color: #4074e1;
}

.c23 .c24 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c23 .c26 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed "
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle "
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        visible
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        closable
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c22"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        mask
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c22"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        maskClosable
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c22"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        keyboard
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c22"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        destroyOnClose
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c16"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        zIndex
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c23"
        >
          <div>
            <span
              class="c24 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up "
                type="caret-up"
              />
            </span>
            <span
              class="c26 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c25"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down "
                type="caret-down"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap c27"
          >
            <input
              autocomplete="off"
              class="c28 uc-fe-numberinput-input c29"
              min="-9007199254740991"
              step="1"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c30"
      type="button"
    >
      Toggle Visible
    </button>
  </div>
</div>
`;

exports[`Modal demo -- size 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    sm
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    md
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    lg
  </button>
</div>
`;

exports[`Modal demo -- titleAndFooter 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c0:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    click
  </button>
</div>
`;
